objects/APTS_Mutually_Exclusive_Rule__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Ext_ID__c</fullName>
        <externalId>true</externalId>
        <label>APTS Ext ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Mutually_Exclusive_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mutually Exclusive Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Mutually Exclusive Rule (Mutually Exclusive Product)</relationshipLabel>
        <relationshipName>Mutually_Exclusive_Rule1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Upgrade/Downgrade Asset Products</relationshipLabel>
        <relationshipName>Mutually_Exclusive_Rule</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Mutually Exclusive Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_Mutually_Exclusive_Product__c</columns>
        <columns>APTS_Product__c</columns>
        <columns>APTS_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Mutually Exclusive Rule</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mutually Exclusive Rule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>